重构AI模块以及更换为JDK17